bahamut: Disable throttling
Config marks all clients as throttling-exempt, but they sometimes
reconnect to quickly for this exemption to kick in.

--- a/workflows.yml
+++ b/workflows.yml
@@ -105,6 +105,7 @@ software:
         build_script: |
             cd $GITHUB_WORKSPACE/Bahamut/
             patch src/s_user.c < $GITHUB_WORKSPACE/bahamut_localhost.patch
+            echo "#undef THROTTLE_ENABLE" >> include/config.h
             libtoolize --force
             aclocal
             autoheader
