--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -67,6 +67,7 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE/Bahamut/
         patch src/s_user.c < $GITHUB_WORKSPACE/bahamut_localhost.patch
+        echo "#undef THROTTLE_ENABLE" >> include/config.h
         libtoolize --force
         aclocal
         autoheader
