--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
 # E203: whitespaces before ':' <https://github.com/psf/black/issues/315>
 # E231: missing whitespace after ','
+# E501: line too long
 # W503: line break before binary operator <https://github.com/psf/black/issues/52>
-ignore = E203,E231,W503
+ignore = E203,E231,E501,W503
 max-line-length = 88
