--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -301,7 +301,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: unrealircd
-        ref: unreal52
+        ref: unreal60_dev
         repository: unrealircd/unrealircd
     - name: Build UnrealIRCd
       run: |
