Initial tests for named-modes.
Only tested with my Insp module.

--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -185,6 +185,7 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE/inspircd/
         patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
+        wget https://raw.githubusercontent.com/progval/inspircd-contrib/namedmodes/4.0/m_ircv3_namedmodes.cpp -O src/modules/m_ircv3_namedmodes.cpp
         ./configure --prefix=$HOME/.local/inspircd --development
         make -j 4
         make install
