--- a/workflows.yml
+++ b/workflows.yml
@@ -153,6 +153,7 @@ software:
         build_script: &inspircd_build_script |
             cd $GITHUB_WORKSPACE/inspircd/
             patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
+            wget https://raw.githubusercontent.com/progval/inspircd-contrib/namedmodes/4.0/m_ircv3_namedmodes.cpp -O src/modules/m_ircv3_namedmodes.cpp
             ./configure --prefix=$HOME/.local/inspircd --development
             make -j 4
             make install
