--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -337,13 +337,13 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: Checkout UnrealIRCd
+    - name: Checkout UnrealIRCd 6
       uses: actions/checkout@v2
       with:
         path: unrealircd
-        ref: 94993a03ca8d3c193c0295c33af39270c3f9d27d
+        ref: d77f42e4bef388ae344256eeef9a8000345ae381
         repository: unrealircd/unrealircd
-    - name: Build UnrealIRCd
+    - name: Build UnrealIRCd 6
       run: |
         cd $GITHUB_WORKSPACE/unrealircd/
         cp $GITHUB_WORKSPACE/data/unreal/* .
@@ -360,6 +360,50 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: installed-unrealircd
+        path: ~/artefacts-*.tar.gz
+        retention-days: 1
+  build-unrealircd-5:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Create directories
+      run: cd ~/; mkdir -p .local/ go/
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        key: 3-${{ runner.os }}-unrealircd-5-stable
+        path: '~/.cache
+
+          ${ github.workspace }/unrealircd
+
+          '
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Checkout UnrealIRCd 5
+      uses: actions/checkout@v2
+      with:
+        path: unrealircd
+        ref: 94993a03ca8d3c193c0295c33af39270c3f9d27d
+        repository: unrealircd/unrealircd
+    - name: Build UnrealIRCd 5
+      run: |
+        cd $GITHUB_WORKSPACE/unrealircd/
+        cp $GITHUB_WORKSPACE/data/unreal/* .
+        # Need to use a specific -march, because GitHub has inconsistent
+        # architectures across workers, which result in random SIGILL with some
+        # worker combinations
+        sudo apt install libsodium-dev libargon2-dev
+        CFLAGS="-O0 -march=x86-64" CXXFLAGS="$CFLAGS" ./Config -quick
+        make -j 4
+        make install
+    - name: Make artefact tarball
+      run: cd ~; tar -czf artefacts-unrealircd-5.tar.gz .local/ go/
+    - name: Upload build artefacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: installed-unrealircd-5
         path: ~/artefacts-*.tar.gz
         retention-days: 1
   publish-test-results:
@@ -385,6 +429,7 @@ jobs:
     - test-solanum
     - test-sopel
     - test-unrealircd
+    - test-unrealircd-5
     - test-unrealircd-anope
     - test-unrealircd-atheme
     runs-on: ubuntu-latest
@@ -1075,6 +1120,38 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: pytest results unrealircd (stable)
+        path: pytest.xml
+  test-unrealircd-5:
+    needs:
+    - build-unrealircd-5
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed-unrealircd-5
+        path: '~'
+    - name: Unpack artefacts
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest pytest-xdist -r requirements.txt
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:$PATH
+        make unrealircd-5
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results unrealircd-5 (stable)
         path: pytest.xml
   test-unrealircd-anope:
     needs:
