--- a/workflows.yml
+++ b/workflows.yml
@@ -130,7 +130,7 @@ software:
         pre_deps:
             - uses: actions/setup-go@v2
               with:
-                  go-version: '~1.17'
+                  go-version: '^1.17.0'
             - run: go version
         separate_build_job: false
         build_script: |
