--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -385,6 +385,7 @@ jobs:
     - test-plexus4
     - test-solanum
     - test-sopel
+    - test-thelounge
     - test-unrealircd
     - test-unrealircd-5
     - test-unrealircd-anope
@@ -928,6 +929,32 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: pytest results sopel (devel)
+        path: pytest.xml
+  test-thelounge:
+    needs: []
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Install dependencies
+      run: yarn global add https://github.com/thelounge/thelounge.git
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest pytest-xdist -r requirements.txt
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+        thelounge
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results thelounge (devel)
         path: pytest.xml
   test-unrealircd:
     needs:
