--- a/workflows.yml
+++ b/workflows.yml
@@ -104,7 +104,7 @@ software:
         separate_build_job: true
         build_script: |
             cd $GITHUB_WORKSPACE/Bahamut/
-            patch src/s_user.c < $GITHUB_WORKSPACE/bahamut_localhost.patch
+            patch src/s_user.c < $GITHUB_WORKSPACE/patches/bahamut_localhost.patch
             echo "#undef THROTTLE_ENABLE" >> include/config.h
             libtoolize --force
             aclocal
@@ -152,7 +152,7 @@ software:
         separate_build_job: true
         build_script: &inspircd_build_script |
             cd $GITHUB_WORKSPACE/inspircd/
-            patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
+            patch src/inspircd.cpp < $GITHUB_WORKSPACE/patches/inspircd_mainloop.patch
             ./configure --prefix=$HOME/.local/inspircd --development
             make -j 4
             make install
@@ -217,6 +217,7 @@ software:
         separate_build_job: true
         build_script: |
             cd $GITHUB_WORKSPACE/ngircd
+            patch src/ngircd/client.c < $GITHUB_WORKSPACE/patches/ngircd_whowas_delay.patch
             ./autogen.sh
             ./configure --prefix=$HOME/.local/
             make -j 4
