--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -260,7 +260,7 @@ jobs:
       run: 'curl https://gitlab.com/rizon/plexus4/-/archive/20211115_0-611/plexus4-20211115_0-611.tar
         | tar -zx
 
-        mv plexus4* plexus4'
+        mv plexus* plexus4'
     - name: build
       run: 'cd $GITHUB_WORKSPACE/plexus4
 
