--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -258,7 +258,7 @@ jobs:
         python-version: 3.7
     - name: clone
       run: 'curl https://gitlab.com/rizon/plexus4/-/archive/20211115_0-611/plexus4-20211115_0-611.tar
-        | tar -zx
+        | tar -x
 
         mv plexus* plexus4'
     - name: build
