add ircd.pem; can't start without it

--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -750,6 +750,7 @@ jobs:
         ./configure --prefix=$HOME/.local/ --enable-debug
         make -j 4
         make install
+        cp $GITHUB_WORKSPACE/data/nefarious/* $HOME/.local/lib
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
