--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -491,7 +491,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results bahamut (stable)
+        name: pytest-results_bahamut_stable
         path: pytest.xml
   test-bahamut-anope:
     needs:
@@ -529,7 +529,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results bahamut-anope (stable)
+        name: pytest-results_bahamut-anope_stable
         path: pytest.xml
   test-bahamut-atheme:
     needs:
@@ -561,7 +561,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results bahamut-atheme (stable)
+        name: pytest-results_bahamut-atheme_stable
         path: pytest.xml
   test-charybdis:
     needs:
@@ -593,7 +593,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results charybdis (stable)
+        name: pytest-results_charybdis_stable
         path: pytest.xml
   test-ergo:
     needs: []
@@ -632,7 +632,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results ergo (stable)
+        name: pytest-results_ergo_stable
         path: pytest.xml
   test-hybrid:
     needs:
@@ -670,7 +670,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results hybrid (stable)
+        name: pytest-results_hybrid_stable
         path: pytest.xml
   test-inspircd:
     needs:
@@ -702,7 +702,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results inspircd (stable)
+        name: pytest-results_inspircd_stable
         path: pytest.xml
   test-inspircd-anope:
     needs:
@@ -740,7 +740,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results inspircd-anope (stable)
+        name: pytest-results_inspircd-anope_stable
         path: pytest.xml
   test-inspircd-atheme:
     needs:
@@ -772,7 +772,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results inspircd-atheme (stable)
+        name: pytest-results_inspircd-atheme_stable
         path: pytest.xml
   test-irc2:
     needs: []
@@ -826,7 +826,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results irc2 (stable)
+        name: pytest-results_irc2_stable
         path: pytest.xml
   test-ircu2:
     needs: []
@@ -864,7 +864,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results ircu2 (stable)
+        name: pytest-results_ircu2_stable
         path: pytest.xml
   test-limnoria:
     needs: []
@@ -890,7 +890,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results limnoria (stable)
+        name: pytest-results_limnoria_stable
         path: pytest.xml
   test-ngircd:
     needs:
@@ -922,7 +922,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results ngircd (stable)
+        name: pytest-results_ngircd_stable
         path: pytest.xml
   test-ngircd-anope:
     needs:
@@ -960,7 +960,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results ngircd-anope (stable)
+        name: pytest-results_ngircd-anope_stable
         path: pytest.xml
   test-ngircd-atheme:
     needs:
@@ -992,7 +992,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results ngircd-atheme (stable)
+        name: pytest-results_ngircd-atheme_stable
         path: pytest.xml
   test-plexus4:
     needs:
@@ -1030,7 +1030,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results plexus4 (stable)
+        name: pytest-results_plexus4_stable
         path: pytest.xml
   test-solanum:
     needs:
@@ -1062,7 +1062,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results solanum (stable)
+        name: pytest-results_solanum_stable
         path: pytest.xml
   test-sopel:
     needs: []
@@ -1088,7 +1088,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results sopel (stable)
+        name: pytest-results_sopel_stable
         path: pytest.xml
   test-unrealircd:
     needs:
@@ -1120,7 +1120,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results unrealircd (stable)
+        name: pytest-results_unrealircd_stable
         path: pytest.xml
   test-unrealircd-5:
     needs:
@@ -1152,7 +1152,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results unrealircd-5 (stable)
+        name: pytest-results_unrealircd-5_stable
         path: pytest.xml
   test-unrealircd-anope:
     needs:
@@ -1190,7 +1190,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results unrealircd-anope (stable)
+        name: pytest-results_unrealircd-anope_stable
         path: pytest.xml
   test-unrealircd-atheme:
     needs:
@@ -1222,7 +1222,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results unrealircd-atheme (stable)
+        name: pytest-results_unrealircd-atheme_stable
         path: pytest.xml
 name: irctest with stable versions
 'on':
