--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -35,7 +35,7 @@ jobs:
       name: Upload to Netlify
       run: |-
         npm i -g netlify-cli
-        ./deploy_to_netlify.sh
+        ./.github/deploy_to_netlify.sh
   test-ergo:
     needs: []
     runs-on: ubuntu-latest
