--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -4,7 +4,7 @@
 jobs:
   publish-test-results:
     if: success() || failure()
-    name: Publish Unit Tests Results
+    name: Publish Dashboard
     needs:
     - test-ergo
     - test-limnoria
